--- a/web/index.scss
+++ b/web/index.scss
@@ -44,6 +44,7 @@ body {
     border-radius: 16px;
     position: relative;
     z-index: 2;
+    padding: 30px;
 }
 
 .text-content, .text-content-feedback {
